<resources>
    <string name="app_name">Apenas Um</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="sign">Login</string>
    <string name="register">Cadastro</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="forgot_pass">esqueci a senha</string>
    <string name="save">Salvar</string>
    <string name="check_connection">Verificando a conexão</string>
    <string name="login_sucess">Logado com suceso!</string>
    <string name="login_error">Não foi possível conectar a sua conta.</string>

    <!--Register-->
    <string name="name_register">First Name</string>
    <string name="lastName_register">Last Name</string>
    <string name="cpf_register">CPF</string>
    <string name="email_register">Email</string>
    <string name="phone_register">Phone</string>


    <string name="profie">Perfil</string>
    <string name="cards">Cartões</string>
    <string name="transactions">Transações</string>

    <string name="title_activity_new_card">NewCardActivity</string>
</resources>
