<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".controller.LoginActivity">

    <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_register"
            android:inputType="textEmailAddress" />

    <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName_register"
            android:inputType="textPassword" />
    <EditText
            android:id="@+id/editCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpf_register"
            android:inputType="textEmailAddress" />

    <EditText
            android:id="@+id/editEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_register"
            android:inputType="textEmailAddress" />

    <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_register"
            android:inputType="textPassword" />
    <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:onClick="doLogin"
            android:text="@string/btn_login" />


</LinearLayout>